--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = null;
 }
@@ -9,24 +8,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Index</title>
+    <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
             integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
-        
   <body>
-
-      <div>
-          <h4>Index</h4>
-          <environment names="Development">
-              This is development environment
-          </environment>
-          <environment names="Production">
-              This is production environment
-          </environment>
-          <a href="/Home/Create">Create</a>
-      </div>
-
+      <h4>Index</h4>
+      <environment names="Development"> This is development environment </environment>
+      <environment names="Production"> This is production environment </environment>
+      <a href="/Home/Create">Create</a>
   </body>
-
 </html>
