--- a/Views/Home/Create.cshtml
+++ b/Views/Home/Create.cshtml
@@ -1,6 +1,5 @@
-﻿@model DotnetCoreForms.Models.ProductEditModel;
+@model DotnetCoreForms_004.Models.ProductEditModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-
 @{
     Layout = null;
 }
@@ -10,43 +9,50 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Create</title>
+    <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
             integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <style>
+        .field-validation-error{
+            color: red;
+        }
+    </style>
   </head>
-
   <body>
-        <div class="container">
-          <div class="row">
+    <div class="container">
+        <div class="row">
             <div class="col"></div>
-            <!------------------------------------------------------------------->
+            <!---------------------------------------------------------------------->
             <div class="col">
-              <form asp-controller="Home", asp-action="Create" method="post">
-                  
-                  <div class="mb-3">
-                    <label class="form-label" asp-for="Name">Name</label>
-                    <input class="form-control" asp-for="Name">
-                  </div>
+                <div asp-validation-summary="All">
+                    <span>Please correct the following errors</span>
+                </div>
+                <form asp-action="Create" asp-controller="Home" method="post">
 
-                  <div class="mb-3">
-                    <label class="form-label" asp-for="Rate">Rate</label>
-                    <input class="form-control" asp-for="Rate" asp-format="{0:N0}">
-                  </div>
+                    <div class="mb-4">
+                        <label class="form-label" asp-for="Name">Name</label>
+                        <input class="form-control" asp-for="Name"/>
+                        <span asp-validation-for="Name"></span>
+                    </div>
 
-                  <div class="mb-3">
-                    <label  class="form-label" asp-for="Rating">Rating</label>
-                    <input class="form-control" asp-for="Rating">
-                  </div>
+                    <div class="mb-4">
+                        <label class="form-label" asp-for="Rate">Rate</label>
+                        <input class="form-control" asp-for="Rate"/>
+                    </div>
 
-                  <button type="submit" class="btn btn-primary">Submit</button>
+                    <div class="mb-4">
+                        <label class="form-label" asp-for="Rating"></label>
+                        <input class="form-control" asp-for="Rating"/>
+                    </div>
 
+                    <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
             </div>
-            <!-------------------------------------------------------------------->
+            <!---------------------------------------------------------------------->
             <div class="col"></div>
-          </div>
         </div>
+    </div>
   </body>
-
 </html>
